--- a/styles/cstem_styles.css
+++ b/styles/cstem_styles.css
@@ -599,10 +599,10 @@
 #prototype{
   z-index: 1;
   position: absolute;
-  top: 133px;
-  width: 936px;
-  height: 505px;
-  margin-left: 17.5%;
+  justify-content: center;
+  top: 130px;
+  width: 100%;
+  height: 525px;
 }
 
 .prototype_full_column {
