--- a/styles/dhousing_styles.css
+++ b/styles/dhousing_styles.css
@@ -266,7 +266,7 @@
 /**👋----------------Current Experience------------------👋**/
 .background{
   background-color: white;
-  height: 10000px;
+  height: 6000px;
 }
 .current-experience-container{
   display: flex;
@@ -350,7 +350,7 @@
   width: 1000px;
   height: 373.05px;
   z-index: 2;
-  top: 1900px
+  top: 1950px
 }
 
 /**👋----------------Solution------------------👋**/
@@ -359,7 +359,7 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  top: 1400px;
+  top: 1550px;
 
   z-index: 2;
 
@@ -367,7 +367,7 @@
 
 .redesign-banner{
   position: relative;
-  top: 400px;
+  top: 500px;
 
   margin: 0;
 
@@ -421,7 +421,7 @@
 
 .break-down-container{
   position: relative;
-  top: 1700px;
+  top: 2100px;
   z-index: 2;
 
   padding-top: 100px;
@@ -482,6 +482,33 @@
   font-size: 32px;
   font-weight: 700;
   line-height: 1.8em;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.back_home_button {
+  border-radius: 10px;
+  /* margin-top: 200%; */
+  font-family: 'Roboto', sans-serif;
+  font-size: .8rem;
+  font-weight: 600;
+  margin-right: 20%;
 }
 
 
