--- a/styles/dhousing_styles.css
+++ b/styles/dhousing_styles.css
@@ -266,7 +266,7 @@
 /**👋----------------Current Experience------------------👋**/
 .background{
   background-color: white;
-  height: 6000px;
+  height: 5550px;
 }
 .current-experience-container{
   display: flex;
@@ -449,27 +449,29 @@
   position: relative;
   width: auto;
   height: 400px;
-
-  padding-right: 20px;
-
+  margin-right: 10%;
+  margin-bottom: 10%;
+  box-shadow: 10px 10px 20px rgba(174, 174, 192, 0.4), -20px -20px 20px rgba(255, 255, 255, 0.66);
+  border-radius: 10px;
 }
 
-.finall-gif{
+.final-giff{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 
 }
 
-.finall-gif img{
+.final-giff img{
   position: relative;
   width: auto;
-  height: 240px;
-  padding-bottom: 2%;
-  text-align: center;
-  padding-left: 20px;
-
+  height: 410px;
+  margin-right: 10%;
+  margin-bottom: 10%;
+  box-shadow: 10px 10px 20px rgba(174, 174, 192, 0.4), -20px -20px 20px rgba(255, 255, 255, 0.66);
+  border-radius: 10px;
 }
+
 
 .break-down-text{
   margin-left: 2%;
@@ -504,7 +506,7 @@
 
 .back_home_button {
   border-radius: 10px;
-  /* margin-top: 200%; */
+  margin-top: 200%;
   font-family: 'Roboto', sans-serif;
   font-size: .8rem;
   font-weight: 600;
@@ -655,40 +657,3 @@
   width: 600px;
   padding-bottom: 70px;
 } */
-
-.back_home{
-  position: relative;
-  top:5500px;
-
-}
-footer{
-  position: relative;
-  top:5500px;
-}
-
-.back-to-top {
-  overflow: hidden;
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-  z-index: 118;
-  display: none;
-  color:grey;
-  transition: all .2s linear;
-  -moz-transition: all .2s linear;
-  -webkit-transition: all .2s linear;
-  -o-transition: all .2s linear;
-}
-
-.back-to-top--is-visible { 
-  visibility: visible;
-  opacity: 1;
-}
-
-.back-to-top--fade-out { 
-  opacity: .5;
-}
-
-.back-to-top:hover {
-  color:black;
-}
