--- a/styles/styles.css
+++ b/styles/styles.css
@@ -220,20 +220,20 @@ ol {
         Navigation
 */
 
-.navbar{
+/* .navbar{
   z-index: 1000;
   width: 100%;
-  /* position: fixed;
+  position: fixed;
   -webkit-box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75); */
-}
+  box-shadow: 0px 0px 51px -20px rgba(0,0,0,0.75);
+} */
 
 footer{
     background-color: aliceblue;
 }
 
-.navbar-toggler {
+/* .navbar-toggler {
   border: 0px;
 }
 .navbar li a{
@@ -242,7 +242,7 @@ footer{
 }
 .navbar-brand {
     padding: 0;
-}
+} */
 
 .logo {
     margin: 0;
