--- a/styles/play_styles.css
+++ b/styles/play_styles.css
@@ -1,92 +1,57 @@
-@media screen and (min-width: 1170px) {
-    .container-fluid, .container, .admin-container {
-        padding: 0 0rem 0 0rem;
-    }
-}
-.container {
-max-width: 1170px;
-}@media screen and (max-width: 1169px) { .row {
-margin-left: -2.5px;
-margin-right: -2.5px;
-}.column, .grid-column {
-padding-left: 2.5px;
-padding-right: 2.5px;
-}}@media screen and (min-width: 1170px) { .row {
-margin-left: -5px;
-margin-right: -5px;
-}.column, .grid-column {
-padding-left: 5px;
-padding-right: 5px;
-}}
-#content-holder h1 { font-size: 2.6666666666666665rem;line-height: 3.0555555555555554rem;}#content-holder h2 { line-height: 2.7777777777777777rem;}#content-holder h4 { line-height: 1.8888888888888888rem;}#content-holder h5 { font-size: 1.1111111111111112rem;}#content-holder p, #content-holder li { font-size: 0.8888888888888888rem;line-height: 1.6666666666667;letter-spacing: 0rem;}#content-holder .is-content p { margin-bottom: 1.6666666666667em; }@media screen and (min-width: 992px) and (max-width: 1169.98px) { #content-holder h1 { font-size: 2.45rem; line-height: 2.81rem; }#content-holder h2 { font-size: 1.84rem; line-height: 2.56rem; }#content-holder h3 { font-size: 1.49rem; line-height: 1.92rem; }#content-holder h4 { font-size: 1.28rem; line-height: 1.81rem; }#content-holder h5 { font-size: 1.11rem; line-height: 1.78rem; }#content-holder h6 { font-size: 1rem; line-height: 1.67rem; }}@media screen and (min-width: 768px) and (max-width: 991.98px) { #content-holder h1 { font-size: 2.29rem; line-height: 2.63rem; }#content-holder h2 { font-size: 1.76rem; line-height: 2.44rem; }#content-holder h3 { font-size: 1.43rem; line-height: 1.84rem; }#content-holder h4 { font-size: 1.23rem; line-height: 1.74rem; }#content-holder h5 { font-size: 1.11rem; line-height: 1.78rem; }#content-holder h6 { font-size: 1rem; line-height: 1.67rem; }}@media screen and (min-width: 544px) and (max-width: 767.98px) { #content-holder h1 { font-size: 2.19rem; line-height: 2.51rem; }#content-holder h2 { font-size: 1.68rem; line-height: 2.33rem; }#content-holder h3 { font-size: 1.4rem; line-height: 1.8rem; }#content-holder h4 { font-size: 1.2rem; line-height: 1.7rem; }#content-holder h5 { font-size: 1.11rem; line-height: 1.78rem; }#content-holder h6 { font-size: 1rem; line-height: 1.67rem; }}@media screen and (max-width: 543.98px) { #content-holder h1 { font-size: 2.08rem; line-height: 2.38rem; }#content-holder h2 { font-size: 1.6rem; line-height: 2.22rem; }#content-holder h3 { font-size: 1.37rem; line-height: 1.76rem; }#content-holder h4 { font-size: 1.17rem; line-height: 1.66rem; }#content-holder h5 { font-size: 1.11rem; line-height: 1.78rem; }#content-holder h6 { font-size: 1rem; line-height: 1.67rem; }}
-
-
-.project-panel {
-background: #f5f5f5;
-padding: 2.5rem 0rem;
-}
-.pp-thumbs {
-margin-bottom: -1.666666666666667rem;
-}
-#content-holder .panel-label, .projectpanel-preview .panel-label {
-color: #000000;
-font-size: 1.6666666666666667rem;
-text-transform: none;
-padding-left: 0rem;
-padding-bottom: 1.666666666666667rem;
-text-align: left;
-line-height: 1;
-}
-.project-panel .pp-title {
-padding: 0.5555555555555556rem 0rem 1.666666666666667rem 0rem;
-}
-.project-panel .pp-title a {
-color: #000000; 
-font-size: 0.7222222222222222rem; 
-text-transform: none;
-} 
-.project-panel .pp-title span {
-color: #999999;
-font-size: 0.7222222222222222rem;
-text-transform: none;
+main{
+    width:100vw;
+    margin-top:150px;
+    padding: 0 9% 0 9%;
+    display: flex;
+    justify-content: space-around;
 }
 
-.is-content { color: #4f4f4f; }a { color: #6b6b6b; }a:hover { color: #a5a5a5; }// 2021 page //
-.hide-for-mobile {display: none !important}
-
-// 2020 page //
-.Rectangle {
-width: 733px;
-height: 600px;
-box-shadow: 40px 0 100px 0 rgba(30, 21, 82, 0.05);
-background-color: #ffffff;
+section{
+    width: 100%;
+    /* max-width: 1500px; */
+    height: 100vh;
+    /* max-height: 450px; */
+    /* background:black; */
+    margin: 0 10% 25px 10%;
+    margin-bottom: 25px;
 }
 
-
-
-// 2019 page //
-
-.neomorphic {
-box-shadow: 10px 10px 20px rgba(174, 174, 192, 0.4), -20px -20px 20px rgba(255, 255, 255, 0.66);
-border-radius: 20px 0px 0px 20px;
+#grid{
+    display: grid;
+    grid-template-columns: 0.7fr 0.7fr 1.6fr;
+    grid-template-rows: 0.7fr 1.3fr;
+    grid-gap: 15px;
+    padding: 15px;
 }
 
-.airbnb {
-background: linear-gradient(108.43deg, #E55157 0%, #E54F7A 100%);
-/* Neomorphic */
-box-shadow: 10px 10px 20px rgba(174, 174, 192, 0.4), -20px -20px 20px rgba(255, 255, 255, 0.66);
-border-radius: 10px;
+/* .box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.box:nth-child(1){
+    
+    background: url(../img/play1.jpg);
+    background-size: 100%;
 }
 
-.neomorphicimage {
-box-shadow: 10px 10px 20px rgba(174, 174, 192, 0.4), -20px -20px 20px rgba(255, 255, 255, 0.66);
-border-radius: 20px;
-}#nprogress .bar { background: #efeaff; }.back-to-top a svg { fill: #8c8c8c; }
+.box:nth-child(2){
+   
+    background: url(../img/play2.jpg);
+    background-size: 100%;
+}
 
-#content-527 #section_jwk2hcit4 {padding-top: 5.555555555555555rem;padding-bottom: 8.88888888888889rem;}#content-527 #content_16h99bpjz {padding-bottom: 0.6666666666666666rem;}#content-527 #content_16h99bpjz .is-content {}#content-527 #content_4drn91wrp {padding-top: 0rem;padding-right: 0rem;margin-right: 0rem;padding-bottom: 0.8888888888888888rem;padding-left: 0rem;margin-left: -0.7777777777777778rem;}#content-527 #content_4drn91wrp .is-content {}#content-527 #content_izb6kheoj {padding-bottom: 0.6666666666666666rem;background-color: #ffffff;}#content-527 #content_izb6kheoj .is-content {}#content-527 #content_gu7vnhppu {padding-bottom: 0.6666666666666666rem;}#content-527 #content_gu7vnhppu .is-content {}#content-527 #content_k34g50ld8 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_k34g50ld8 .is-content {}#content-527 #content_ooaip7x53 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_ooaip7x53 .is-content {}#content-527 #content_qlbz4wkul {padding-bottom: 0.6666666666666666rem;}#content-527 #content_qlbz4wkul .is-content {}#content-527 #content_1tgbnhhi9 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_1tgbnhhi9 .is-content {}#content-527 #content_7tjc4mdm1 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_7tjc4mdm1 .is-content {}#content-527 #content_n2s02v3j3 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_n2s02v3j3 .is-content {}#content-527 #content_945vwxa62 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_945vwxa62 .is-content {}#content-527 #content_ubbw8ufuq {padding-bottom: 0.6666666666666666rem;}#content-527 #content_ubbw8ufuq .is-content {}#content-527 #content_b84d4cc72 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_b84d4cc72 .is-content {}#content-527 #content_h8fl15deo {padding-bottom: 0.6666666666666666rem;}#content-527 #content_h8fl15deo .is-content {}#content-527 #content_sazafhny4 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_sazafhny4 .is-content {}#content-527 #content_fsr0vrch4 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_fsr0vrch4 .is-content {}#content-527 #content_5i8onp8p5 {padding-bottom: 0.6666666666666666rem;}#content-527 #content_5i8onp8p5 .is-content {}#content-527 #content_w1mb8blu8 {padding-bottom: 0.6666666666666666rem;padding-left: 0rem;}#content-527 #content_w1mb8blu8 .is-content {}#content-527 .transition-wrap {}#content-527 #content_16h99bpjz {opacity: 1;transform:;}#content-527 #content_n2s02v3j3 {opacity: 1;transform:;}#content-527 #section_e0aa34c36 {padding-top: 5.555555555555555rem;padding-right: 0rem;padding-bottom: 5.555555555555555rem;background-color: #f9f9f9;}#content-527 #content_d655695de {padding-bottom: 1.7777777777777777rem;}#content-527 #content_d655695de .is-content {}
-#content-527 #content_6e6d5b34a .is-content {background-color: transparent;}
-#content-527 #content_6e6d5b34a .is-content:hover {color: #6b6b6b !important;background-color: transparent !important;}
-#content-527 #content_6e6d5b34a .is-content a{padding-top: 0.4444444444444444rem;padding-right: 0rem;padding-bottom: 0rem;padding-left: 0rem;color: #6b6b6b;}
-#content-527 #content_6e6d5b34a .is-content:hover a {color: #a5a5a5 !important;}
-@media screen and (max-width: 543.98px) { #content-527 #column_bd79c9c34 {padding-top: 1.6666666666666667rem;}}@media screen and (max-width: 543.98px) { #content-527 #content_2a508158d {padding-top: 0rem;}#content-527 #content_2a508158d .is-content {}}#content-527 #content_a43c2a0c3 {padding-top: 0.4444444444444444rem;}#content-527 #content_a43c2a0c3 .is-content {}@media screen and (max-width: 543.98px) { #content-527 #column_4e7709464 {padding-top: 1.6666666666666667rem;}}#content-527 #content_2d71643b8 {padding-top: 0.4444444444444444rem;}#content-527 #content_2d71643b8 .is-content {}
-.nav_zzlvek8xx { background-color: transparent;; }.nav_zzlvek8xx .navbar-inner .logo a { color: #020202; }.nav_zzlvek8xx .navbar-inner .logo a { font-size: 0.8888888888888888rem; }.logo a { text-transform: uppercase; }.logo a { letter-spacing: 0.08333333333333333rem; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { background-color: #000000; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon { width: 24; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { height: 2px; }.nav_zzlvek8xx .navbar-inner .hamburger a.open-menu span::before { transform: translateY(-6px); }.nav_zzlvek8xx .navbar-inner .hamburger a.open-menu span::after { transform: translateY(6px); }.nav_zzlvek8xx .navbar-inner .hamburger a.open-menu:hover span::before { transform: translateY(-8px); }.nav_zzlvek8xx .navbar-inner .hamburger a.open-menu:hover span::after { transform: translateY(8px); }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon { height: 14px; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { margin-top: 7px; }.nav_zzlvek8xx .navbar-inner nav ul li a span { color: #020202; }.nav_zzlvek8xx .navbar-inner nav ul li a span { text-transform: none; }.nav_zzlvek8xx .navbar-inner nav ul li a span { letter-spacing: 0rem; }.nav_zzlvek8xx .navbar-inner nav ul li a span { border-bottom-width: 0.05555555555555555rem; }.nav_zzlvek8xx .navbar-inner nav ul li a span { border-bottom-color: transparent; }.nav_zzlvek8xx .navbar-inner nav ul li a:hover span, .navbar-inner nav ul li.current-menu-item a span, .navbar-inner nav ul li.current_page_item a span, .nav_zzlvek8xx .navbar-inner nav ul li.wrap-focus a span { color: #020202; }.nav_zzlvek8xx .navbar-inner nav ul li.current-menu-item a span { color: #020202; }.nav_zzlvek8xx .navbar-inner nav ul li.current_page_item a span { color: #020202; }[data-post-type="project"] .navbar-inner nav ul li.portfolio-grid a span, [data-post-type="post"] .navbar-inner nav ul li.blog-overview a span { color: #020202; }.nav_zzlvek8xx .navbar-inner nav ul li a:hover span { border-bottom-color: #020202; }.nav_zzlvek8xx .navbar-inner nav ul li.current-menu-item a span { border-bottom-color: #020202; }.nav_zzlvek8xx .navbar-inner nav ul li.current_page_item a span { border-bottom-color: #020202; }[data-post-type="project"] .navbar-inner nav ul li.portfolio-grid a span, [data-post-type="post"] .navbar-inner nav ul li.blog-overview a span { border-bottom-color: #020202; }#overlay-menu { background-color: rgba(245, 245, 245, 1); }@media screen and (min-width: 992px) and (max-width: 1169.98px) { .nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon { height: 14px; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { margin-top: 7px; }}@media screen and (min-width: 768px) and (max-width: 991.98px) { .nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon { height: 14px; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { margin-top: 7px; }}@media screen and (min-width: 544px) and (max-width: 767.98px) { .nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon { height: 14px; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { margin-top: 7px; }}@media screen and (max-width: 543.98px) { .nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon { height: 14px; }.nav_zzlvek8xx .navbar-inner .hamburger a.menu-icon span { margin-top: 7px; }}
+.box:nth-child(3){
+    grid-column: 1/3;
+    grid-row: 2/3;
+    background: url(../img/play3.jpg);
+    background-size: 100%;
+}
+
+.box:nth-child(4){
+    grid-column: 3/3;
+    grid-row: 1/3;
+    background: url(../img/play4.jpg);
+    background-size: 105%;
+}
