--- a/styles/dcc_styles.css
+++ b/styles/dcc_styles.css
@@ -41,16 +41,89 @@ body{
 #section_50a063b80 {
   position: absolute;
   background:#fff;
-  height: 800px;
+  height: 650px;
   top: 955.96px;
   z-index: 2;
 }
 
+#section_gn7adfidh{
+  position: absolute;
+  background:#fff;
+  top: 940px;
+  padding-top: 80px;
+  height: 1050px;
+  bottom: 0;
+  z-index: 1;
+}
+
+
+#section_0qwq7b5bw{
+  position: absolute;
+  background:#fff;
+  top: 900px;
+  height: 3450px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_0qwq2b5bw{
+  position: absolute;
+  background:#fff;
+  top:700px;
+  height:250px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gl7adfidh{
+  position: absolute;
+  background:#fff;
+  top:700px;
+  height:750px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_0qwq5b5bw{
+  position: absolute;
+  background:#fff;
+  height:840px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gk7adfidh{
+  position: absolute;
+  background:#fff;
+  padding-top:80px;
+  height:1350px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gm7adfidh{
+  position: absolute;
+  background:#fff;
+  height: 250px;
+  bottom: 0;
+  z-index: 1;
+}
+
+
+#section_gg7adfidh{
+  position: absolute;
+  background:#fff;
+  height:300px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#content-493 #section_88fbaa4be {padding-top: 0;margin-bottom: 3.555555rem}
+
 #section_88fbaa4be{
   position: absolute;
   background:#fff;
-  top: 950px;
-  height: 2600px;
+  height: 1670px;
   bottom: 0;
   z-index: 1;
 }
@@ -224,18 +297,100 @@ padding-right: 5px;
 #section_50a063b80 {
   position: absolute;
   background:#fff;
-  height: 1100px;
-  top: 200.96px;
+  top: 300.96px;
+  height: 900px;
   z-index: 2;
 }
+
+#section_gn7adfidh{
+  position: absolute;
+  background:#fff;
+  padding-top: 80px;
+  top:180px;
+  height: 950px;
+  bottom: 0;
+  z-index: 1;
+}
+
+
+#section_0qwq7b5bw{
+  position: absolute;
+  background:#fff;
+  top: 100px;
+  height: 2000px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#content_wuwjeg6dg{
+  height:220px;
+}
+
+
+#section_0qwq2b5bw{
+  position: absolute;
+  background:#fff;
+  top:100px;
+  height:300px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gl7adfidh{
+  position: absolute;
+  background:#fff;
+  top:100px;
+  height:180px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_0qwq5b5bw{
+  position: absolute;
+  background:#fff;
+  height:800px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gk7adfidh{
+  position: absolute;
+  background:#fff;
+  padding-top:80px;
+  height:1100px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gm7adfidh{
+  position: absolute;
+  background:#fff;
+  height: 200px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#section_gg7adfidh{
+  position: absolute;
+  background:#fff;
+  height:0px;
+  bottom: 0;
+  z-index: 1;
+}
+
+#content-493 #section_88fbaa4be {padding-top: 0rem;margin-bottom: 0}
 
 #section_88fbaa4be{
   position: absolute;
   background:#fff;
-  top: 150px;
-  height: 850px;
+  height: 950px;
   bottom: 0;
   z-index: 1;
+}
+
+.footer{
+  padding-top:30%;
+  padding-bottom:5%;
 }
 
 }
