--- a/styles/explored_styles.css
+++ b/styles/explored_styles.css
@@ -61,7 +61,7 @@ body{
   /* width: 100%;
   height: 100%; */
   background:#fff;
-  height: 600px;
+  height: 570px;
   top: 900.96px;
   z-index: 2;
 }
@@ -71,7 +71,7 @@ body{
   position: absolute;
   background:#fff;
   top: 900px;
-  height: 480px;
+  height: 300px;
   bottom: 0;
   z-index: 1;
 }
@@ -81,6 +81,7 @@ body{
   background:#fff;
   top: 900px;
   height: 1300px;
+  padding-top:0;
   bottom: 0;
   z-index: 1;
 }
@@ -370,12 +371,11 @@ padding-right: 5px;
   z-index: 2;
 }
 
-
 #section_s3wm3gu75{
   position: absolute;
   background:#fff;
   top: 400px;
-  height: 700px;
+  height: 550px;
   bottom: 0;
   z-index: 1;
 }
